--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,13 @@
 /* Add custom css styles here */
+#bg--img{
+    background-size:100% 100%;
+    background-repeat: no-repeat;
+    height: 400px;
+}
+
+#text--box{
+    background: rgba(0,0,0,.5);
+    border-radius: 15px;
+    width: 500px;
+    height: 150px;
+}
